# keepass4web-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  container-image.yml  rust.yml  test.yml
js/scripts/: Alert.js  BackendLogin.js  CallbackUserAuth.js  DBLogin.js  GroupViewer.js  HTTPError.js  Info.js  LoginForm.js  NavBar.js  NodeViewer.js  Splash.js  Timer.js  TreeNode.js  TreeViewer.js  UserLogin.js  Viewport.js  app.js  nagivateHook.js
js/style/: app.css
public/: index.html
seccomp/: keyring.json
src/: auth.rs  auth_backend.rs  config.rs  db_backend.rs  keepass.rs  main.rs  server.rs  session.rs
src/auth_backend/: htpasswd.rs  ldap.rs  none.rs  oidc.rs  test.rs
src/config/: backend.rs  config.rs  cookie.rs  filesystem.rs  htpasswd.rs  http.rs  key.rs  ldap.rs  oidc.rs  search.rs
src/db_backend/: filesystem.rs  http.rs  test.rs
src/keepass/: db_cache.rs  encrypted.rs  entry.rs  keepass.rs  key.rs
src/server/: route.rs  server.rs
src/server/route/: auth.rs  keepass.rs  util.rs
tests/: config.test.yml  test.kdbx
tests/e2e/: main-flow.spec.js
