[package]
name = "keepass4web-rs"
authors = ["Viktor Liu"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
actix-server = "2.3.0"
actix-files = "0.6.5"
actix-web = "4"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7.10", features = ["io", "io-util", "compat"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
serde_millis = "0.1.1"
base64 = "0.22.0"
humantime-serde = "1.1.1"
postcard = { version = "1.0.8", features = ["use-std"] }
env_logger = { version = "0.11.1", features = [] }
log = "0.4.21"
rand = "0.8.5"
keepass = { git = "https://github.com/lixmal/keepass-rs", features = ["serialization", "save_kdbx4"] }
zeroize = { version = "1.7.0", features = ["derive", "std"] }
secrecy = "0.8.0"
uuid = { version = "1.8.0", features = ["v4"] }
regex = "1.10.2"
mime = "0.3.17"
aes-gcm = { version = "0.10.3", features = ["zeroize", "std"] }
constant_time_eq = "0.3.1"
linux-keyutils = { version = "0.2.4", features = ["std"] }
url = { version = "2.5.0", features = ["serde"] }
openidconnect = "3.4.0"
async-trait = "0.1.77"
ldap3 = { version = "0.11.5", default-features = false, features = ["tls-rustls"] }
reqwest = { version = "0.11.25", features = ["rustls", "__tls", "rustls-tls", "stream", "webpki-roots", "rustls-tls-webpki-roots"], default-features = false }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["io"] }
htpasswd-verify = { git = "https://github.com/twistedfall/htpasswd-verify", rev = "ff14703083cbd639f7d05622b398926f3e718d61" }

[dev-dependencies]
clippy = "0.0.302"
mockito = "1.4.0"
